Tue May 17 20:20:49 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_core.h (rb_thread_struct): add volatile to
	  transition_for_lock because it is not protected by lock.

Sun May 15 21:22:35 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* cont.c (cont_init): clear macihne_stack_start/end of saved thread to
	  prevent mark machine stack of GC'ed Thread. root Fiber is not initialized by
	  fiber_init(). based on a patch by Serge Balyuk [ruby-core:35891] fixes #4612
	* test/ruby/test_fiber.rb (test_gc_root_fiber): add test for it.

Wed May 11 19:45:27 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/forwardable.rb: support 'delegate :foo => :bar' for to meet
	  by specification of RDOC.

Sun May  8 19:39:16 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (native_cond_timedwait): add to care EINTR.
	* thread_pthread.c (thread_timer): remove EINTR check.

Fri May  6 15:01:11 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/syck/rubyext.c (mktime_do): avoid buffer overrun, by
	  silently ignoring lesser significant digits.  Required buffer
	  length can be computable so you might at first think of
	  allocating enough memory space on the fly using alloca().  That
	  is a wrong idea because when using alloca there is always risk
	  of integer overflow.  A function that accepts outer-process
	  resources like this should not blindly trust its inputs.  In
	  this particular case we just want to generate miliseconds
	  resolution by strtod() so the string in question needs no more
	  length than what we originally have.  Ignoring lesser
	  significant digits should suffice I believe.

Fri May  6 14:25:53 2011  Tinco Andringa <mail@tinco.nl>

	* ext/syck/rubyext.c (mktime_do): YAML.load time correctly parse
	  usecs smaller than 1 fixes #4571

Thu May  5 17:36:31 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* eval.c (frame_func_id): store result of method_entry_of_iseq() to